// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Advanced ProductCardSkeleton Snapshot should match snapshot with pulse 1`] = `
<View
  style={
    [
      {
        "backgroundColor": "#fff",
        "borderRadius": 12,
        "elevation": 3,
        "marginBottom": 16,
        "shadowColor": "#000",
        "shadowOffset": {
          "height": 2,
          "width": 0,
        },
        "shadowOpacity": 0.1,
        "shadowRadius": 4,
      },
      {
        "borderRadius": 12,
      },
      undefined,
    ]
  }
>
  <View
    onLayout={[Function]}
    style={
      [
        {
          "overflow": "hidden",
        },
        {
          "backgroundColor": "#DDEAF5",
          "height": 200,
          "width": "100%",
        },
        {},
        {
          "opacity": 1,
        },
      ]
    }
  />
  <View
    style={
      {
        "padding": 12,
      }
    }
  >
    <View
      onLayout={[Function]}
      style={
        [
          {
            "overflow": "hidden",
          },
          {
            "backgroundColor": "#DDEAF5",
            "height": 20,
            "width": "80%",
          },
          {
            "marginBottom": 8,
          },
          {
            "opacity": 1,
          },
        ]
      }
    />
    <View
      onLayout={[Function]}
      style={
        [
          {
            "overflow": "hidden",
          },
          {
            "backgroundColor": "#DDEAF5",
            "height": 16,
            "width": "60%",
          },
          {
            "marginBottom": 12,
          },
          {
            "opacity": 1,
          },
        ]
      }
    />
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "space-between",
        }
      }
    >
      <View
        onLayout={[Function]}
        style={
          [
            {
              "overflow": "hidden",
            },
            {
              "backgroundColor": "#DDEAF5",
              "height": 24,
              "width": 80,
            },
            {},
            {
              "opacity": 1,
            },
          ]
        }
      />
      <View
        onLayout={[Function]}
        style={
          [
            {
              "overflow": "hidden",
            },
            {
              "backgroundColor": "#DDEAF5",
              "height": 40,
              "width": 40,
            },
            {},
            {
              "opacity": 1,
            },
          ]
        }
      />
    </View>
  </View>
</View>
`;

exports[`Advanced ProductCardSkeleton Snapshot should match snapshot with shiver 1`] = `
<View
  style={
    [
      {
        "backgroundColor": "#fff",
        "borderRadius": 12,
        "elevation": 3,
        "marginBottom": 16,
        "shadowColor": "#000",
        "shadowOffset": {
          "height": 2,
          "width": 0,
        },
        "shadowOpacity": 0.1,
        "shadowRadius": 4,
      },
      {
        "borderRadius": 12,
      },
      undefined,
    ]
  }
>
  <View
    onLayout={[Function]}
    style={
      [
        {
          "overflow": "hidden",
        },
        {
          "backgroundColor": "#DDEAF5",
          "height": 200,
          "width": "100%",
        },
        {},
        {
          "opacity": 1,
        },
      ]
    }
  >
    <View
      onLayout={[Function]}
      style={
        [
          {
            "transform": [
              {
                "translateX": 0,
              },
            ],
          },
          {
            "width": "80%",
          },
          false,
          false,
        ]
      }
    >
      <LinearGradient
        colors={
          [
            "rgba(255,255,255,0)",
            "rgba(255,255,255,0.1)",
            "rgba(255,255,255,0.4)",
            "rgba(255,255,255,0.6)",
            "rgba(255,255,255,0.7)",
            "rgba(255,255,255,0.6)",
            "rgba(255,255,255,0.4)",
            "rgba(255,255,255,0.1)",
            "rgba(255,255,255,0)",
          ]
        }
        end={
          {
            "x": 1,
            "y": 0,
          }
        }
        start={
          {
            "x": 0,
            "y": 0,
          }
        }
        style={
          {
            "height": "100%",
            "width": "100%",
          }
        }
      />
    </View>
  </View>
  <View
    style={
      {
        "padding": 12,
      }
    }
  >
    <View
      onLayout={[Function]}
      style={
        [
          {
            "overflow": "hidden",
          },
          {
            "backgroundColor": "#DDEAF5",
            "height": 20,
            "width": "80%",
          },
          {
            "marginBottom": 8,
          },
          {
            "opacity": 1,
          },
        ]
      }
    >
      <View
        onLayout={[Function]}
        style={
          [
            {
              "transform": [
                {
                  "translateX": 0,
                },
              ],
            },
            {
              "width": "80%",
            },
            false,
            false,
          ]
        }
      >
        <LinearGradient
          colors={
            [
              "rgba(255,255,255,0)",
              "rgba(255,255,255,0.1)",
              "rgba(255,255,255,0.4)",
              "rgba(255,255,255,0.6)",
              "rgba(255,255,255,0.7)",
              "rgba(255,255,255,0.6)",
              "rgba(255,255,255,0.4)",
              "rgba(255,255,255,0.1)",
              "rgba(255,255,255,0)",
            ]
          }
          end={
            {
              "x": 1,
              "y": 0,
            }
          }
          start={
            {
              "x": 0,
              "y": 0,
            }
          }
          style={
            {
              "height": "100%",
              "width": "100%",
            }
          }
        />
      </View>
    </View>
    <View
      onLayout={[Function]}
      style={
        [
          {
            "overflow": "hidden",
          },
          {
            "backgroundColor": "#DDEAF5",
            "height": 16,
            "width": "60%",
          },
          {
            "marginBottom": 12,
          },
          {
            "opacity": 1,
          },
        ]
      }
    >
      <View
        onLayout={[Function]}
        style={
          [
            {
              "transform": [
                {
                  "translateX": 0,
                },
              ],
            },
            {
              "width": "80%",
            },
            false,
            false,
          ]
        }
      >
        <LinearGradient
          colors={
            [
              "rgba(255,255,255,0)",
              "rgba(255,255,255,0.1)",
              "rgba(255,255,255,0.4)",
              "rgba(255,255,255,0.6)",
              "rgba(255,255,255,0.7)",
              "rgba(255,255,255,0.6)",
              "rgba(255,255,255,0.4)",
              "rgba(255,255,255,0.1)",
              "rgba(255,255,255,0)",
            ]
          }
          end={
            {
              "x": 1,
              "y": 0,
            }
          }
          start={
            {
              "x": 0,
              "y": 0,
            }
          }
          style={
            {
              "height": "100%",
              "width": "100%",
            }
          }
        />
      </View>
    </View>
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "space-between",
        }
      }
    >
      <View
        onLayout={[Function]}
        style={
          [
            {
              "overflow": "hidden",
            },
            {
              "backgroundColor": "#DDEAF5",
              "height": 24,
              "width": 80,
            },
            {},
            {
              "opacity": 1,
            },
          ]
        }
      >
        <View
          onLayout={[Function]}
          style={
            [
              {
                "transform": [
                  {
                    "translateX": 0,
                  },
                ],
              },
              {
                "width": "80%",
              },
              false,
              false,
            ]
          }
        >
          <LinearGradient
            colors={
              [
                "rgba(255,255,255,0)",
                "rgba(255,255,255,0.1)",
                "rgba(255,255,255,0.4)",
                "rgba(255,255,255,0.6)",
                "rgba(255,255,255,0.7)",
                "rgba(255,255,255,0.6)",
                "rgba(255,255,255,0.4)",
                "rgba(255,255,255,0.1)",
                "rgba(255,255,255,0)",
              ]
            }
            end={
              {
                "x": 1,
                "y": 0,
              }
            }
            start={
              {
                "x": 0,
                "y": 0,
              }
            }
            style={
              {
                "height": "100%",
                "width": "100%",
              }
            }
          />
        </View>
      </View>
      <View
        onLayout={[Function]}
        style={
          [
            {
              "overflow": "hidden",
            },
            {
              "backgroundColor": "#DDEAF5",
              "height": 40,
              "width": 40,
            },
            {},
            {
              "opacity": 1,
            },
          ]
        }
      >
        <View
          onLayout={[Function]}
          style={
            [
              {
                "transform": [
                  {
                    "translateX": 0,
                  },
                ],
              },
              {
                "width": "80%",
              },
              false,
              false,
            ]
          }
        >
          <LinearGradient
            colors={
              [
                "rgba(255,255,255,0)",
                "rgba(255,255,255,0.1)",
                "rgba(255,255,255,0.4)",
                "rgba(255,255,255,0.6)",
                "rgba(255,255,255,0.7)",
                "rgba(255,255,255,0.6)",
                "rgba(255,255,255,0.4)",
                "rgba(255,255,255,0.1)",
                "rgba(255,255,255,0)",
              ]
            }
            end={
              {
                "x": 1,
                "y": 0,
              }
            }
            start={
              {
                "x": 0,
                "y": 0,
              }
            }
            style={
              {
                "height": "100%",
                "width": "100%",
              }
            }
          />
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`Advanced ProductListSkeleton Snapshot should match snapshot with pulse 1`] = `
<View
  style={
    [
      {
        "padding": 16,
      },
      undefined,
    ]
  }
>
  <View
    onLayout={[Function]}
    style={
      [
        {
          "overflow": "hidden",
        },
        {
          "backgroundColor": "#DDEAF5",
          "height": 32,
          "width": 150,
        },
        {
          "marginBottom": 16,
        },
        {
          "opacity": 1,
        },
      ]
    }
  />
  <View
    style={
      [
        {
          "backgroundColor": "#fff",
          "borderRadius": 12,
          "elevation": 3,
          "marginBottom": 16,
          "shadowColor": "#000",
          "shadowOffset": {
            "height": 2,
            "width": 0,
          },
          "shadowOpacity": 0.1,
          "shadowRadius": 4,
        },
        {
          "borderRadius": 12,
        },
        undefined,
      ]
    }
  >
    <View
      onLayout={[Function]}
      style={
        [
          {
            "overflow": "hidden",
          },
          {
            "backgroundColor": "#DDEAF5",
            "height": 200,
            "width": "100%",
          },
          {},
          {
            "opacity": 1,
          },
        ]
      }
    />
    <View
      style={
        {
          "padding": 12,
        }
      }
    >
      <View
        onLayout={[Function]}
        style={
          [
            {
              "overflow": "hidden",
            },
            {
              "backgroundColor": "#DDEAF5",
              "height": 20,
              "width": "80%",
            },
            {
              "marginBottom": 8,
            },
            {
              "opacity": 1,
            },
          ]
        }
      />
      <View
        onLayout={[Function]}
        style={
          [
            {
              "overflow": "hidden",
            },
            {
              "backgroundColor": "#DDEAF5",
              "height": 16,
              "width": "60%",
            },
            {
              "marginBottom": 12,
            },
            {
              "opacity": 1,
            },
          ]
        }
      />
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "space-between",
          }
        }
      >
        <View
          onLayout={[Function]}
          style={
            [
              {
                "overflow": "hidden",
              },
              {
                "backgroundColor": "#DDEAF5",
                "height": 24,
                "width": 80,
              },
              {},
              {
                "opacity": 1,
              },
            ]
          }
        />
        <View
          onLayout={[Function]}
          style={
            [
              {
                "overflow": "hidden",
              },
              {
                "backgroundColor": "#DDEAF5",
                "height": 40,
                "width": 40,
              },
              {},
              {
                "opacity": 1,
              },
            ]
          }
        />
      </View>
    </View>
  </View>
  <View
    style={
      [
        {
          "backgroundColor": "#fff",
          "borderRadius": 12,
          "elevation": 3,
          "marginBottom": 16,
          "shadowColor": "#000",
          "shadowOffset": {
            "height": 2,
            "width": 0,
          },
          "shadowOpacity": 0.1,
          "shadowRadius": 4,
        },
        {
          "borderRadius": 12,
        },
        undefined,
      ]
    }
  >
    <View
      onLayout={[Function]}
      style={
        [
          {
            "overflow": "hidden",
          },
          {
            "backgroundColor": "#DDEAF5",
            "height": 200,
            "width": "100%",
          },
          {},
          {
            "opacity": 1,
          },
        ]
      }
    />
    <View
      style={
        {
          "padding": 12,
        }
      }
    >
      <View
        onLayout={[Function]}
        style={
          [
            {
              "overflow": "hidden",
            },
            {
              "backgroundColor": "#DDEAF5",
              "height": 20,
              "width": "80%",
            },
            {
              "marginBottom": 8,
            },
            {
              "opacity": 1,
            },
          ]
        }
      />
      <View
        onLayout={[Function]}
        style={
          [
            {
              "overflow": "hidden",
            },
            {
              "backgroundColor": "#DDEAF5",
              "height": 16,
              "width": "60%",
            },
            {
              "marginBottom": 12,
            },
            {
              "opacity": 1,
            },
          ]
        }
      />
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "space-between",
          }
        }
      >
        <View
          onLayout={[Function]}
          style={
            [
              {
                "overflow": "hidden",
              },
              {
                "backgroundColor": "#DDEAF5",
                "height": 24,
                "width": 80,
              },
              {},
              {
                "opacity": 1,
              },
            ]
          }
        />
        <View
          onLayout={[Function]}
          style={
            [
              {
                "overflow": "hidden",
              },
              {
                "backgroundColor": "#DDEAF5",
                "height": 40,
                "width": 40,
              },
              {},
              {
                "opacity": 1,
              },
            ]
          }
        />
      </View>
    </View>
  </View>
  <View
    style={
      [
        {
          "backgroundColor": "#fff",
          "borderRadius": 12,
          "elevation": 3,
          "marginBottom": 16,
          "shadowColor": "#000",
          "shadowOffset": {
            "height": 2,
            "width": 0,
          },
          "shadowOpacity": 0.1,
          "shadowRadius": 4,
        },
        {
          "borderRadius": 12,
        },
        undefined,
      ]
    }
  >
    <View
      onLayout={[Function]}
      style={
        [
          {
            "overflow": "hidden",
          },
          {
            "backgroundColor": "#DDEAF5",
            "height": 200,
            "width": "100%",
          },
          {},
          {
            "opacity": 1,
          },
        ]
      }
    />
    <View
      style={
        {
          "padding": 12,
        }
      }
    >
      <View
        onLayout={[Function]}
        style={
          [
            {
              "overflow": "hidden",
            },
            {
              "backgroundColor": "#DDEAF5",
              "height": 20,
              "width": "80%",
            },
            {
              "marginBottom": 8,
            },
            {
              "opacity": 1,
            },
          ]
        }
      />
      <View
        onLayout={[Function]}
        style={
          [
            {
              "overflow": "hidden",
            },
            {
              "backgroundColor": "#DDEAF5",
              "height": 16,
              "width": "60%",
            },
            {
              "marginBottom": 12,
            },
            {
              "opacity": 1,
            },
          ]
        }
      />
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "space-between",
          }
        }
      >
        <View
          onLayout={[Function]}
          style={
            [
              {
                "overflow": "hidden",
              },
              {
                "backgroundColor": "#DDEAF5",
                "height": 24,
                "width": 80,
              },
              {},
              {
                "opacity": 1,
              },
            ]
          }
        />
        <View
          onLayout={[Function]}
          style={
            [
              {
                "overflow": "hidden",
              },
              {
                "backgroundColor": "#DDEAF5",
                "height": 40,
                "width": 40,
              },
              {},
              {
                "opacity": 1,
              },
            ]
          }
        />
      </View>
    </View>
  </View>
</View>
`;

exports[`Advanced ProductListSkeleton Snapshot should match snapshot with shiver 1`] = `
<View
  style={
    [
      {
        "padding": 16,
      },
      undefined,
    ]
  }
>
  <View
    onLayout={[Function]}
    style={
      [
        {
          "overflow": "hidden",
        },
        {
          "backgroundColor": "#DDEAF5",
          "height": 32,
          "width": 150,
        },
        {
          "marginBottom": 16,
        },
        {
          "opacity": 1,
        },
      ]
    }
  >
    <View
      onLayout={[Function]}
      style={
        [
          {
            "transform": [
              {
                "translateX": 0,
              },
            ],
          },
          {
            "width": "80%",
          },
          false,
          false,
        ]
      }
    >
      <LinearGradient
        colors={
          [
            "rgba(255,255,255,0)",
            "rgba(255,255,255,0.1)",
            "rgba(255,255,255,0.4)",
            "rgba(255,255,255,0.6)",
            "rgba(255,255,255,0.7)",
            "rgba(255,255,255,0.6)",
            "rgba(255,255,255,0.4)",
            "rgba(255,255,255,0.1)",
            "rgba(255,255,255,0)",
          ]
        }
        end={
          {
            "x": 1,
            "y": 0,
          }
        }
        start={
          {
            "x": 0,
            "y": 0,
          }
        }
        style={
          {
            "height": "100%",
            "width": "100%",
          }
        }
      />
    </View>
  </View>
  <View
    style={
      [
        {
          "backgroundColor": "#fff",
          "borderRadius": 12,
          "elevation": 3,
          "marginBottom": 16,
          "shadowColor": "#000",
          "shadowOffset": {
            "height": 2,
            "width": 0,
          },
          "shadowOpacity": 0.1,
          "shadowRadius": 4,
        },
        {
          "borderRadius": 12,
        },
        undefined,
      ]
    }
  >
    <View
      onLayout={[Function]}
      style={
        [
          {
            "overflow": "hidden",
          },
          {
            "backgroundColor": "#DDEAF5",
            "height": 200,
            "width": "100%",
          },
          {},
          {
            "opacity": 1,
          },
        ]
      }
    >
      <View
        onLayout={[Function]}
        style={
          [
            {
              "transform": [
                {
                  "translateX": 0,
                },
              ],
            },
            {
              "width": "80%",
            },
            false,
            false,
          ]
        }
      >
        <LinearGradient
          colors={
            [
              "rgba(255,255,255,0)",
              "rgba(255,255,255,0.1)",
              "rgba(255,255,255,0.4)",
              "rgba(255,255,255,0.6)",
              "rgba(255,255,255,0.7)",
              "rgba(255,255,255,0.6)",
              "rgba(255,255,255,0.4)",
              "rgba(255,255,255,0.1)",
              "rgba(255,255,255,0)",
            ]
          }
          end={
            {
              "x": 1,
              "y": 0,
            }
          }
          start={
            {
              "x": 0,
              "y": 0,
            }
          }
          style={
            {
              "height": "100%",
              "width": "100%",
            }
          }
        />
      </View>
    </View>
    <View
      style={
        {
          "padding": 12,
        }
      }
    >
      <View
        onLayout={[Function]}
        style={
          [
            {
              "overflow": "hidden",
            },
            {
              "backgroundColor": "#DDEAF5",
              "height": 20,
              "width": "80%",
            },
            {
              "marginBottom": 8,
            },
            {
              "opacity": 1,
            },
          ]
        }
      >
        <View
          onLayout={[Function]}
          style={
            [
              {
                "transform": [
                  {
                    "translateX": 0,
                  },
                ],
              },
              {
                "width": "80%",
              },
              false,
              false,
            ]
          }
        >
          <LinearGradient
            colors={
              [
                "rgba(255,255,255,0)",
                "rgba(255,255,255,0.1)",
                "rgba(255,255,255,0.4)",
                "rgba(255,255,255,0.6)",
                "rgba(255,255,255,0.7)",
                "rgba(255,255,255,0.6)",
                "rgba(255,255,255,0.4)",
                "rgba(255,255,255,0.1)",
                "rgba(255,255,255,0)",
              ]
            }
            end={
              {
                "x": 1,
                "y": 0,
              }
            }
            start={
              {
                "x": 0,
                "y": 0,
              }
            }
            style={
              {
                "height": "100%",
                "width": "100%",
              }
            }
          />
        </View>
      </View>
      <View
        onLayout={[Function]}
        style={
          [
            {
              "overflow": "hidden",
            },
            {
              "backgroundColor": "#DDEAF5",
              "height": 16,
              "width": "60%",
            },
            {
              "marginBottom": 12,
            },
            {
              "opacity": 1,
            },
          ]
        }
      >
        <View
          onLayout={[Function]}
          style={
            [
              {
                "transform": [
                  {
                    "translateX": 0,
                  },
                ],
              },
              {
                "width": "80%",
              },
              false,
              false,
            ]
          }
        >
          <LinearGradient
            colors={
              [
                "rgba(255,255,255,0)",
                "rgba(255,255,255,0.1)",
                "rgba(255,255,255,0.4)",
                "rgba(255,255,255,0.6)",
                "rgba(255,255,255,0.7)",
                "rgba(255,255,255,0.6)",
                "rgba(255,255,255,0.4)",
                "rgba(255,255,255,0.1)",
                "rgba(255,255,255,0)",
              ]
            }
            end={
              {
                "x": 1,
                "y": 0,
              }
            }
            start={
              {
                "x": 0,
                "y": 0,
              }
            }
            style={
              {
                "height": "100%",
                "width": "100%",
              }
            }
          />
        </View>
      </View>
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "space-between",
          }
        }
      >
        <View
          onLayout={[Function]}
          style={
            [
              {
                "overflow": "hidden",
              },
              {
                "backgroundColor": "#DDEAF5",
                "height": 24,
                "width": 80,
              },
              {},
              {
                "opacity": 1,
              },
            ]
          }
        >
          <View
            onLayout={[Function]}
            style={
              [
                {
                  "transform": [
                    {
                      "translateX": 0,
                    },
                  ],
                },
                {
                  "width": "80%",
                },
                false,
                false,
              ]
            }
          >
            <LinearGradient
              colors={
                [
                  "rgba(255,255,255,0)",
                  "rgba(255,255,255,0.1)",
                  "rgba(255,255,255,0.4)",
                  "rgba(255,255,255,0.6)",
                  "rgba(255,255,255,0.7)",
                  "rgba(255,255,255,0.6)",
                  "rgba(255,255,255,0.4)",
                  "rgba(255,255,255,0.1)",
                  "rgba(255,255,255,0)",
                ]
              }
              end={
                {
                  "x": 1,
                  "y": 0,
                }
              }
              start={
                {
                  "x": 0,
                  "y": 0,
                }
              }
              style={
                {
                  "height": "100%",
                  "width": "100%",
                }
              }
            />
          </View>
        </View>
        <View
          onLayout={[Function]}
          style={
            [
              {
                "overflow": "hidden",
              },
              {
                "backgroundColor": "#DDEAF5",
                "height": 40,
                "width": 40,
              },
              {},
              {
                "opacity": 1,
              },
            ]
          }
        >
          <View
            onLayout={[Function]}
            style={
              [
                {
                  "transform": [
                    {
                      "translateX": 0,
                    },
                  ],
                },
                {
                  "width": "80%",
                },
                false,
                false,
              ]
            }
          >
            <LinearGradient
              colors={
                [
                  "rgba(255,255,255,0)",
                  "rgba(255,255,255,0.1)",
                  "rgba(255,255,255,0.4)",
                  "rgba(255,255,255,0.6)",
                  "rgba(255,255,255,0.7)",
                  "rgba(255,255,255,0.6)",
                  "rgba(255,255,255,0.4)",
                  "rgba(255,255,255,0.1)",
                  "rgba(255,255,255,0)",
                ]
              }
              end={
                {
                  "x": 1,
                  "y": 0,
                }
              }
              start={
                {
                  "x": 0,
                  "y": 0,
                }
              }
              style={
                {
                  "height": "100%",
                  "width": "100%",
                }
              }
            />
          </View>
        </View>
      </View>
    </View>
  </View>
  <View
    style={
      [
        {
          "backgroundColor": "#fff",
          "borderRadius": 12,
          "elevation": 3,
          "marginBottom": 16,
          "shadowColor": "#000",
          "shadowOffset": {
            "height": 2,
            "width": 0,
          },
          "shadowOpacity": 0.1,
          "shadowRadius": 4,
        },
        {
          "borderRadius": 12,
        },
        undefined,
      ]
    }
  >
    <View
      onLayout={[Function]}
      style={
        [
          {
            "overflow": "hidden",
          },
          {
            "backgroundColor": "#DDEAF5",
            "height": 200,
            "width": "100%",
          },
          {},
          {
            "opacity": 1,
          },
        ]
      }
    >
      <View
        onLayout={[Function]}
        style={
          [
            {
              "transform": [
                {
                  "translateX": 0,
                },
              ],
            },
            {
              "width": "80%",
            },
            false,
            false,
          ]
        }
      >
        <LinearGradient
          colors={
            [
              "rgba(255,255,255,0)",
              "rgba(255,255,255,0.1)",
              "rgba(255,255,255,0.4)",
              "rgba(255,255,255,0.6)",
              "rgba(255,255,255,0.7)",
              "rgba(255,255,255,0.6)",
              "rgba(255,255,255,0.4)",
              "rgba(255,255,255,0.1)",
              "rgba(255,255,255,0)",
            ]
          }
          end={
            {
              "x": 1,
              "y": 0,
            }
          }
          start={
            {
              "x": 0,
              "y": 0,
            }
          }
          style={
            {
              "height": "100%",
              "width": "100%",
            }
          }
        />
      </View>
    </View>
    <View
      style={
        {
          "padding": 12,
        }
      }
    >
      <View
        onLayout={[Function]}
        style={
          [
            {
              "overflow": "hidden",
            },
            {
              "backgroundColor": "#DDEAF5",
              "height": 20,
              "width": "80%",
            },
            {
              "marginBottom": 8,
            },
            {
              "opacity": 1,
            },
          ]
        }
      >
        <View
          onLayout={[Function]}
          style={
            [
              {
                "transform": [
                  {
                    "translateX": 0,
                  },
                ],
              },
              {
                "width": "80%",
              },
              false,
              false,
            ]
          }
        >
          <LinearGradient
            colors={
              [
                "rgba(255,255,255,0)",
                "rgba(255,255,255,0.1)",
                "rgba(255,255,255,0.4)",
                "rgba(255,255,255,0.6)",
                "rgba(255,255,255,0.7)",
                "rgba(255,255,255,0.6)",
                "rgba(255,255,255,0.4)",
                "rgba(255,255,255,0.1)",
                "rgba(255,255,255,0)",
              ]
            }
            end={
              {
                "x": 1,
                "y": 0,
              }
            }
            start={
              {
                "x": 0,
                "y": 0,
              }
            }
            style={
              {
                "height": "100%",
                "width": "100%",
              }
            }
          />
        </View>
      </View>
      <View
        onLayout={[Function]}
        style={
          [
            {
              "overflow": "hidden",
            },
            {
              "backgroundColor": "#DDEAF5",
              "height": 16,
              "width": "60%",
            },
            {
              "marginBottom": 12,
            },
            {
              "opacity": 1,
            },
          ]
        }
      >
        <View
          onLayout={[Function]}
          style={
            [
              {
                "transform": [
                  {
                    "translateX": 0,
                  },
                ],
              },
              {
                "width": "80%",
              },
              false,
              false,
            ]
          }
        >
          <LinearGradient
            colors={
              [
                "rgba(255,255,255,0)",
                "rgba(255,255,255,0.1)",
                "rgba(255,255,255,0.4)",
                "rgba(255,255,255,0.6)",
                "rgba(255,255,255,0.7)",
                "rgba(255,255,255,0.6)",
                "rgba(255,255,255,0.4)",
                "rgba(255,255,255,0.1)",
                "rgba(255,255,255,0)",
              ]
            }
            end={
              {
                "x": 1,
                "y": 0,
              }
            }
            start={
              {
                "x": 0,
                "y": 0,
              }
            }
            style={
              {
                "height": "100%",
                "width": "100%",
              }
            }
          />
        </View>
      </View>
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "space-between",
          }
        }
      >
        <View
          onLayout={[Function]}
          style={
            [
              {
                "overflow": "hidden",
              },
              {
                "backgroundColor": "#DDEAF5",
                "height": 24,
                "width": 80,
              },
              {},
              {
                "opacity": 1,
              },
            ]
          }
        >
          <View
            onLayout={[Function]}
            style={
              [
                {
                  "transform": [
                    {
                      "translateX": 0,
                    },
                  ],
                },
                {
                  "width": "80%",
                },
                false,
                false,
              ]
            }
          >
            <LinearGradient
              colors={
                [
                  "rgba(255,255,255,0)",
                  "rgba(255,255,255,0.1)",
                  "rgba(255,255,255,0.4)",
                  "rgba(255,255,255,0.6)",
                  "rgba(255,255,255,0.7)",
                  "rgba(255,255,255,0.6)",
                  "rgba(255,255,255,0.4)",
                  "rgba(255,255,255,0.1)",
                  "rgba(255,255,255,0)",
                ]
              }
              end={
                {
                  "x": 1,
                  "y": 0,
                }
              }
              start={
                {
                  "x": 0,
                  "y": 0,
                }
              }
              style={
                {
                  "height": "100%",
                  "width": "100%",
                }
              }
            />
          </View>
        </View>
        <View
          onLayout={[Function]}
          style={
            [
              {
                "overflow": "hidden",
              },
              {
                "backgroundColor": "#DDEAF5",
                "height": 40,
                "width": 40,
              },
              {},
              {
                "opacity": 1,
              },
            ]
          }
        >
          <View
            onLayout={[Function]}
            style={
              [
                {
                  "transform": [
                    {
                      "translateX": 0,
                    },
                  ],
                },
                {
                  "width": "80%",
                },
                false,
                false,
              ]
            }
          >
            <LinearGradient
              colors={
                [
                  "rgba(255,255,255,0)",
                  "rgba(255,255,255,0.1)",
                  "rgba(255,255,255,0.4)",
                  "rgba(255,255,255,0.6)",
                  "rgba(255,255,255,0.7)",
                  "rgba(255,255,255,0.6)",
                  "rgba(255,255,255,0.4)",
                  "rgba(255,255,255,0.1)",
                  "rgba(255,255,255,0)",
                ]
              }
              end={
                {
                  "x": 1,
                  "y": 0,
                }
              }
              start={
                {
                  "x": 0,
                  "y": 0,
                }
              }
              style={
                {
                  "height": "100%",
                  "width": "100%",
                }
              }
            />
          </View>
        </View>
      </View>
    </View>
  </View>
  <View
    style={
      [
        {
          "backgroundColor": "#fff",
          "borderRadius": 12,
          "elevation": 3,
          "marginBottom": 16,
          "shadowColor": "#000",
          "shadowOffset": {
            "height": 2,
            "width": 0,
          },
          "shadowOpacity": 0.1,
          "shadowRadius": 4,
        },
        {
          "borderRadius": 12,
        },
        undefined,
      ]
    }
  >
    <View
      onLayout={[Function]}
      style={
        [
          {
            "overflow": "hidden",
          },
          {
            "backgroundColor": "#DDEAF5",
            "height": 200,
            "width": "100%",
          },
          {},
          {
            "opacity": 1,
          },
        ]
      }
    >
      <View
        onLayout={[Function]}
        style={
          [
            {
              "transform": [
                {
                  "translateX": 0,
                },
              ],
            },
            {
              "width": "80%",
            },
            false,
            false,
          ]
        }
      >
        <LinearGradient
          colors={
            [
              "rgba(255,255,255,0)",
              "rgba(255,255,255,0.1)",
              "rgba(255,255,255,0.4)",
              "rgba(255,255,255,0.6)",
              "rgba(255,255,255,0.7)",
              "rgba(255,255,255,0.6)",
              "rgba(255,255,255,0.4)",
              "rgba(255,255,255,0.1)",
              "rgba(255,255,255,0)",
            ]
          }
          end={
            {
              "x": 1,
              "y": 0,
            }
          }
          start={
            {
              "x": 0,
              "y": 0,
            }
          }
          style={
            {
              "height": "100%",
              "width": "100%",
            }
          }
        />
      </View>
    </View>
    <View
      style={
        {
          "padding": 12,
        }
      }
    >
      <View
        onLayout={[Function]}
        style={
          [
            {
              "overflow": "hidden",
            },
            {
              "backgroundColor": "#DDEAF5",
              "height": 20,
              "width": "80%",
            },
            {
              "marginBottom": 8,
            },
            {
              "opacity": 1,
            },
          ]
        }
      >
        <View
          onLayout={[Function]}
          style={
            [
              {
                "transform": [
                  {
                    "translateX": 0,
                  },
                ],
              },
              {
                "width": "80%",
              },
              false,
              false,
            ]
          }
        >
          <LinearGradient
            colors={
              [
                "rgba(255,255,255,0)",
                "rgba(255,255,255,0.1)",
                "rgba(255,255,255,0.4)",
                "rgba(255,255,255,0.6)",
                "rgba(255,255,255,0.7)",
                "rgba(255,255,255,0.6)",
                "rgba(255,255,255,0.4)",
                "rgba(255,255,255,0.1)",
                "rgba(255,255,255,0)",
              ]
            }
            end={
              {
                "x": 1,
                "y": 0,
              }
            }
            start={
              {
                "x": 0,
                "y": 0,
              }
            }
            style={
              {
                "height": "100%",
                "width": "100%",
              }
            }
          />
        </View>
      </View>
      <View
        onLayout={[Function]}
        style={
          [
            {
              "overflow": "hidden",
            },
            {
              "backgroundColor": "#DDEAF5",
              "height": 16,
              "width": "60%",
            },
            {
              "marginBottom": 12,
            },
            {
              "opacity": 1,
            },
          ]
        }
      >
        <View
          onLayout={[Function]}
          style={
            [
              {
                "transform": [
                  {
                    "translateX": 0,
                  },
                ],
              },
              {
                "width": "80%",
              },
              false,
              false,
            ]
          }
        >
          <LinearGradient
            colors={
              [
                "rgba(255,255,255,0)",
                "rgba(255,255,255,0.1)",
                "rgba(255,255,255,0.4)",
                "rgba(255,255,255,0.6)",
                "rgba(255,255,255,0.7)",
                "rgba(255,255,255,0.6)",
                "rgba(255,255,255,0.4)",
                "rgba(255,255,255,0.1)",
                "rgba(255,255,255,0)",
              ]
            }
            end={
              {
                "x": 1,
                "y": 0,
              }
            }
            start={
              {
                "x": 0,
                "y": 0,
              }
            }
            style={
              {
                "height": "100%",
                "width": "100%",
              }
            }
          />
        </View>
      </View>
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "space-between",
          }
        }
      >
        <View
          onLayout={[Function]}
          style={
            [
              {
                "overflow": "hidden",
              },
              {
                "backgroundColor": "#DDEAF5",
                "height": 24,
                "width": 80,
              },
              {},
              {
                "opacity": 1,
              },
            ]
          }
        >
          <View
            onLayout={[Function]}
            style={
              [
                {
                  "transform": [
                    {
                      "translateX": 0,
                    },
                  ],
                },
                {
                  "width": "80%",
                },
                false,
                false,
              ]
            }
          >
            <LinearGradient
              colors={
                [
                  "rgba(255,255,255,0)",
                  "rgba(255,255,255,0.1)",
                  "rgba(255,255,255,0.4)",
                  "rgba(255,255,255,0.6)",
                  "rgba(255,255,255,0.7)",
                  "rgba(255,255,255,0.6)",
                  "rgba(255,255,255,0.4)",
                  "rgba(255,255,255,0.1)",
                  "rgba(255,255,255,0)",
                ]
              }
              end={
                {
                  "x": 1,
                  "y": 0,
                }
              }
              start={
                {
                  "x": 0,
                  "y": 0,
                }
              }
              style={
                {
                  "height": "100%",
                  "width": "100%",
                }
              }
            />
          </View>
        </View>
        <View
          onLayout={[Function]}
          style={
            [
              {
                "overflow": "hidden",
              },
              {
                "backgroundColor": "#DDEAF5",
                "height": 40,
                "width": 40,
              },
              {},
              {
                "opacity": 1,
              },
            ]
          }
        >
          <View
            onLayout={[Function]}
            style={
              [
                {
                  "transform": [
                    {
                      "translateX": 0,
                    },
                  ],
                },
                {
                  "width": "80%",
                },
                false,
                false,
              ]
            }
          >
            <LinearGradient
              colors={
                [
                  "rgba(255,255,255,0)",
                  "rgba(255,255,255,0.1)",
                  "rgba(255,255,255,0.4)",
                  "rgba(255,255,255,0.6)",
                  "rgba(255,255,255,0.7)",
                  "rgba(255,255,255,0.6)",
                  "rgba(255,255,255,0.4)",
                  "rgba(255,255,255,0.1)",
                  "rgba(255,255,255,0)",
                ]
              }
              end={
                {
                  "x": 1,
                  "y": 0,
                }
              }
              start={
                {
                  "x": 0,
                  "y": 0,
                }
              }
              style={
                {
                  "height": "100%",
                  "width": "100%",
                }
              }
            />
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;
